# RcppEigen-Lite

./: .gitmodules  CMakeLists.txt  PreLoad.cmake  README.md  RcppUtils.sln  RcppUtils.vcxproj
cmake/: CMakeLists.txt
conan/: conanfile.py
src/: RcppUtils.h
src/RcppUtils/: CMakeLists.txt  RcppUtils.h  eigen.h  nanotime.h
src/RcppUtils/fwd/: RcppUtils.h  eigen.h
